syntax = "proto3";
import "order_management.proto";

package aether_market_data;

service StreamOrderBookState {
    rpc StreamOrderBook(aether.StreamRequest) returns (stream OrderDelta);
}

enum DeltaAction {
    ADD = 0;
    UPDATE = 1;
    DELETE = 2;
}

message OrderDelta {
    DeltaAction action = 1;
    aether.OrderSide side = 2;
    uint64 price = 3;
    uint64 quantity = 4;
}